samples/_failures_safe/1761043289_7ba1e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_42b08451.c: In function ‘main’:
./samples/SAFE/__tmp_42b08451.c:178:5: error: expected expression at end of input
  178 |     if (len > 0 &&
      |     ^~
./samples/SAFE/__tmp_42b08451.c:178:5: error: expected declaration or statement at end of input
